--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -90,7 +90,7 @@
 	float: none;
 	width: auto;
 	height: auto;
-	background-position: center;
+	background-position: center 75px;
 	z-index: 10;
 }
 
