add default cursor for disabled layer buttons

--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -519,6 +519,7 @@
 .layer-buttons .disabled,
 .layer-buttons .disabled:hover {
 	opacity: 0.2;
+	cursor: default;
 }
 
 .layer-buttons .add-new-layer {
