--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -488,7 +488,7 @@
 	width: 363px;
 	font-size: 12px;
 	border: none;
-	border-bottom: 1px solid #DDD;
+	border-bottom: 1px dashed #CCC;
 	-moz-box-shadow: none;
 	-webkit-box-shadow: none;
 	box-shadow: none;
@@ -575,7 +575,7 @@
 
 .layer-type {
 	position: absolute;
-	bottom: 28px;
+	bottom: 18px;
 	padding: 0 10px;
 	background-color: #FCFCFC;
 	margin: 0;
@@ -745,6 +745,14 @@
 	margin: 0;
 	width: 100%;
 	height: 100%
+}
+
+.layers-editor .setting-fields input[name="custom_class"] {
+    width: 120px;
+}
+
+.layers-editor .setting-fields select[name="position"] {
+    width: 127px;
 }
 
 .layers-editor .content-fields table {
