--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -844,6 +844,16 @@
 	position: relative;
 }
 
+.viewport-layers .video-placeholder {
+	display: block;
+	width: 100%;
+	height: 100%;
+	background-image: url('images/video-placeholder-button.png');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-color: #FFF;
+}
+
 .settings-editor .modal-window {
 	min-width: 326px;
 }
