--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -1211,6 +1211,10 @@
 	text-align: center;
 }
 
+.clear-cache-spinner {
+	float: none;
+}
+
 .purchase-code {
 	margin-top: 50px;
 	padding-top: 20px;
