update public css and js files

--- a/public/assets/css/accordion-slider.css
+++ b/public/assets/css/accordion-slider.css
@@ -8,77 +8,77 @@
 	-webkit-tap-highlight-color: transparent;
 }
 
-.accordion-slider .as-mask {
+.as-mask {
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
 }
 
-.accordion-slider .as-panels {
+.as-panels {
 	position: absolute;
 }
 
-.accordion-slider.as-horizontal .as-panels {
+.as-horizontal .as-panels {
 	height: 100%;
 }
 
-.accordion-slider.as-vertical .as-panels {
+.as-vertical .as-panels {
 	width: 100%;
 }
 
-.accordion-slider .as-panel {
+.as-panel {
 	position: absolute;
 	overflow: hidden;
 }
 
-.accordion-slider.overlap .as-panel {
+.as-overlap .as-panel {
 	overflow: visible;
 }
 
-.accordion-slider.as-horizontal .as-panel {
+.as-horizontal .as-panel {
 	height: 100%;
 	width: auto;
 }
 
-.accordion-slider.as-vertical .as-panel {
+.as-vertical .as-panel {
 	width: 100%;
 	height: auto;
 }
 
-.accordion-slider .as-panel.as-shadow {
+.as-shadow {
 	-webkit-box-shadow: -5px 0px 40px 1px #000;
 	-mox-box-shadow: -5px 0px 40px 1px #000;
 	box-shadow: -5px 0px 40px 1px #000;
 }
 
-.accordion-slider .as-background,
-.accordion-slider .as-background-opened {
+.as-background,
+.as-background-opened {
 	border: none;
 	max-width: none;
 	max-height: none;
 }
 
-.accordion-slider.as-horizontal .as-background,
-.accordion-slider.as-horizontal .as-background-opened {
+.as-horizontal .as-background,
+.as-horizontal .as-background-opened {
 	height: 100%;
 	width: auto;
 }
 
-.accordion-slider.as-vertical .as-background,
-.accordion-slider.as-vertical .as-background-opened {
+.as-vertical .as-background,
+.as-vertical .as-background-opened {
 	width: 100%;
 	height: auto;
 }
 
-.accordion-slider .as-background-opened {
+.as-background-opened {
 	position: absolute;
 	left: 0;
 	top: 0;
 	visibility: hidden;
 }
 
-.accordion-slider .as-layer {
+.as-layer {
 	position: absolute;
 	margin: 0;
 	box-sizing: border-box;
@@ -87,27 +87,27 @@
 	-webkit-font-smoothing: subpixel-antialiased;
 }
 
-.accordion-slider .as-layer.as-black {
+.as-black {
 	color: #FFF;
 	background: rgb(0, 0, 0);
 	background: rgba(0, 0, 0, 0.7);
 }
 
-.accordion-slider .as-layer.as-white {
+.as-white {
 	color: #000;
 	background: rgb(255, 255, 255);
 	background: rgba(255, 255, 255, 0.7);
 }
 
-.accordion-slider .as-layer.as-rounded {
+.as-rounded {
 	border-radius: 10px;
 }
 
-.accordion-slider .as-layer.as-padding {
+.as-padding {
 	padding: 10px;
 }
 
-.accordion-slider .as-pagination-buttons {
+.as-pagination-buttons {
 	position: absolute;
 	top: 100%;
 	width: 100%;
@@ -115,7 +115,7 @@
 	padding-top: 10px;
 }
 
-.accordion-slider .as-pagination-button {
+.as-pagination-button {
 	width: 10px;
 	height: 10px;
 	border: 2px solid #000;
@@ -128,32 +128,55 @@
 	cursor: pointer;
 }
 
-.accordion-slider .as-pagination-buttons .as-selected {
+.as-pagination-buttons .as-selected {
 	background-color: #000;
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-	.accordion-slider .as-pagination-button {
+.as-has-buttons {
+	margin-bottom: 32px;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+	.as-pagination-button {
 		width: 14px;
 		height: 14px;
 	}
-}
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 568px) {
-	.accordion-slider .as-pagination-button {
-		width: 18px;
-		height: 18px;
+	.as-has-buttons {
+		margin-bottom: 36px;
 	}
 }
 
-.accordion-slider .selectable {
+@media only screen and (min-width: 568px) and (max-width: 768px) {
+	.as-pagination-button {
+		width: 16px;
+		height: 16px;
+	}
+
+	.as-has-buttons {
+		margin-bottom: 38px;
+	}
+}
+
+@media only screen and (min-width: 320px) and (max-width: 568px) {
+	.as-pagination-button {
+		width: 18px;
+		height: 18px;
+	}
+
+	.as-has-buttons {
+		margin-bottom: 40px;
+	}
+}
+
+.as-selectable {
 	cursor: default;
 }
 
-.accordion-slider .as-grab {
+.as-grab {
 	cursor: url(images/openhand.cur), move;
 }
 
-.accordion-slider .as-grabbing {
+.as-grabbing {
 	cursor: url(images/closedhand.cur), move;
 }
