set viewport size based on image size and accordion orientation

--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -915,7 +915,7 @@ Single accordion page
 
 .viewport-image {
 	position: relative;
-	height: 100%;
+	display: block;
 }
 
 .layers-editor .viewport-layers {
