add border to video and image placeholders

--- a/admin/assets/css/accordion-slider-admin.css
+++ b/admin/assets/css/accordion-slider-admin.css
@@ -942,6 +942,13 @@ Single accordion page
 	position: relative !important;
 }
 
+.viewport-layers .has-placeholder {
+	border: 1px dashed #999;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
 .viewport-layers .video-placeholder {
 	display: block;
 	width: 100%;
