replace public assets

--- a/public/assets/css/accordion-slider.css
+++ b/public/assets/css/accordion-slider.css
@@ -52,11 +52,20 @@
 	box-shadow: -5px 0px 40px 1px #000;
 }
 
+.accordion-slider .as-background,
+.accordion-slider .as-background-opened,
+.accordion-slider iframe,
+.accordion-slider object,
+.accordion-slider video,
+.accordion-slider embed,
+.accordion-slider canvas {
+	max-width: none;
+	max-height: none;
+}
+
 .as-background,
 .as-background-opened {
 	border: none;
-	max-width: none;
-	max-height: none;
 }
 
 .as-horizontal .as-background,
