--- a/public/assets/css/accordion-slider.css
+++ b/public/assets/css/accordion-slider.css
@@ -52,17 +52,6 @@
 	box-shadow: -5px 0px 40px 1px #000;
 }
 
-.accordion-slider .as-background,
-.accordion-slider .as-background-opened,
-.accordion-slider iframe,
-.accordion-slider object,
-.accordion-slider video,
-.accordion-slider embed,
-.accordion-slider canvas {
-	max-width: none;
-	max-height: none;
-}
-
 .as-background,
 .as-background-opened {
 	border: none;
@@ -188,4 +177,74 @@
 
 .as-grabbing {
 	cursor: url(images/closedhand.cur), move;
+}
+
+.as-no-js {
+	overflow: hidden;
+}
+
+.accordion-slider p.as-layer {
+	font-size: 14px;
+	line-height: 1.4;
+}
+
+.accordion-slider h1.as-layer {
+	font-size: 32px;
+	line-height: 1.4;
+}
+
+.accordion-slider h2.as-layer {
+	font-size: 24px;
+	line-height: 1.4;
+}
+
+.accordion-slider h3.as-layer {
+	font-size: 19px;
+	line-height: 1.4;
+}
+
+.accordion-slider h4.as-layer {
+	font-size: 16px;
+	line-height: 1.4;
+}
+
+.accordion-slider h5.as-layer {
+	font-size: 13px;
+	line-height: 1.4;
+}
+
+.accordion-slider h6.as-layer {
+	font-size: 11px;
+	line-height: 1.4;
+}
+
+.accordion-slider img.as-layer {
+	border: none;
+}
+
+.accordion-slider .as-background,
+.accordion-slider .as-background-opened {
+	transition: none !important;
+	-moz-transition: none !important;
+	-webkit-transition: none !important;
+	-o-transition: none !important;
+}
+
+.accordion-slider a {
+	position: static;
+	transition: none !important;
+	-moz-transition: none !important;
+	-webkit-transition: none !important;
+	-o-transition: none !important;
+}
+
+.accordion-slider .as-background,
+.accordion-slider .as-background-opened,
+.accordion-slider iframe,
+.accordion-slider object,
+.accordion-slider video,
+.accordion-slider embed,
+.accordion-slider canvas {
+	max-width: none;
+	max-height: none;
 }
