update public css

--- a/public/assets/css/accordion-slider.css
+++ b/public/assets/css/accordion-slider.css
@@ -225,6 +225,11 @@
 
 .accordion-slider .as-background,
 .accordion-slider .as-background-opened {
+	border: none !important;
+	border-radius: none !important;
+	-webkit-box-shadow: none !important;
+	-mox-box-shadow: none !important;
+	box-shadow: none !important;
 	transition: none !important;
 	-moz-transition: none !important;
 	-webkit-transition: none !important;
